Minimize dockerfile again